[gd_scene load_steps=8 format=2]

[ext_resource path="res://roads_system/RoadRenderer.gd" type="Script" id=1]
[ext_resource path="res://CameraTest.gd" type="Script" id=2]
[ext_resource path="res://roads_system/old/RoadNetwork.gd" type="Script" id=3]
[ext_resource path="res://Boulevard.png" type="Texture" id=4]


[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.156863, 0.396078, 0.113725, 1 )

[sub_resource type="PlaneMesh" id=3]
material = SubResource( 2 )
size = Vector2( 50, 50 )

[node name="Spatial" type="Spatial"]

[node name="Spatial" type="Spatial" parent="."]
script = ExtResource( 2 )

[node name="Spatial" type="Spatial" parent="Spatial"]

[node name="Camera" type="Camera" parent="Spatial/Spatial"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 3, 3 )
far = 8192.0

[node name="RoadNetwork" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="RoadNetwork"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
material_override = SubResource( 1 )
script = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866026, 0, -0.866026, 0.5, 0, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = null

[connection signal="graph_changed" from="RoadNetwork" to="RoadNetwork/MeshInstance" method="_on_RoadNetwork_graph_changed"]
